--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -56,6 +56,7 @@ body{
 	font-family: 'Montserrat', sans-serif;
 	color: #f2f2f2;
 	font-size: 5em;
+	font-weight: bold;
 }
 
 .card-deck{
@@ -93,6 +94,16 @@ body{
 	height:120px;
 	width: 100px;
 	filter: invert(100%)
+}
+
+a{
+	text-decoration: none;
+	color: white;
+}
+
+a:hover{
+	text-decoration: none;
+	color: white;
 }
 
 .fa-facebook:hover{
