--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -82,6 +82,16 @@
 	font-weight: bold;
 }
 
+a{
+	text-decoration: none;
+	color: black;
+}
+
+a:hover{
+	text-decoration: none;
+	color: black;
+}
+
 
 .fa-facebook:hover{
 	color: #3B5998;
