--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -6,7 +6,7 @@
 
 body{
 	background-image: url(../images/spice3.jpg);
-	/*background-color: black;*/
+	
 }
 
 .navbar{
@@ -29,14 +29,8 @@ body{
 	font-size: 5em;
 }
 
-.img-thumbnail{
-	height: 130px;
-	width: 100px;
-}
-
-
-.card-img-top{
-	height: 250px;
+#top h2{
+	font-weight: bold;
 }
 
 #footer{
@@ -53,6 +47,26 @@ body{
 	height: 500px;
 	width: 350px;
 }
+
+.card-deck{
+	font-family: 'Montserrat', sans-serif;
+}
+
+.card-title{
+	font-size: 2.5em;
+	font-weight: bold;
+}
+
+a{
+	text-decoration: none;
+	color: white;
+}
+
+a:hover{
+	text-decoration: none;
+	color: white;
+}
+
 .fa-facebook:hover{
 	color: #3B5998;
 }
@@ -79,7 +93,8 @@ and (max-device-width : 480px) {
 	.img-thumbnail{
 	height: 100px;
 	width: 70px;
-}
+	}
+
 
 }
 
@@ -89,5 +104,18 @@ and (max-device-width : 480px) {
 and (min-width: 481px) 
 and (max-width: 960px)
 {
+	.card-title{
+		font-size: 1.1em;
+		font-weight: bold;
+	}
 
+	.card-text{
+		font-size: 0.8em;
+	}
+
+	h4{
+		font-size: 1em;
+	}
+
+	
 }
